<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="seniordesign.loginandregister02.MainActivity">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edTx_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edTx_username_hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edTx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edTx_password_hint"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_text" />

    <TextView
        android:id="@+id/tv_register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txVw_link_to_register" />

</LinearLayout>
